# venera

./: .gitignore  CLAUDE.md  Dockerfile.webpwa  README.md  README_CN.md  README_EN.md  alt_store.json  altstore-source-beta.json  altstore-source.json  pubspec.yaml
android/: .gitignore
assets/: translation.json
doc/: SYNC_FORMAT_SPEC.md
lib/: headless.dart  init.dart  init_web.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
release-notes/: v2.0.10.en.md  v2.0.10.zh-CN.md  v2.0.9.en.md  v2.0.9.zh-CN.md  v2.1.11.en.md  v2.1.11.zh-CN.md  v2.1.12.en.md  v2.1.12.zh-CN.md  v2.1.2.en.md  v2.1.2.zh-CN.md  v2.1.5.en.md  v2.1.5.zh-CN.md  v2.1.6.en.md  v2.1.6.zh-CN.md  v2.1.9.en.md  v2.1.9.zh-CN.md
server/: Cargo.toml
server/js/: image-fetcher.mjs  source-runtime.mjs  webdav-client.mjs
server/migrations/: 0001_init.sql
server/src/: backup_export.rs  config.rs  db.rs  error.rs  image_proxy.rs  import_preview.rs  main.rs  models.rs  routes.rs  source_runtime.rs  webdav_runtime.rs
test/: atomic_write_test.dart  background_keepalive_test.dart  comic_state_repository_test.dart  cookie_jar_test.dart  data_sync_version_test.dart  data_web_db_extract_test.dart  database_restore_test.dart  domain_database_test.dart  dump_color_scheme_test.dart  follow_update_info_merge_test.dart  image_translation_rate_limiter_test.dart  import_error_classification_test.dart  in_place_restore_test.dart  ordered_group_committer_test.dart  pre_translation_chapter_test.dart  source_library_test.dart  (+6 more)
web_helper/rust-fetch/: Cargo.toml
web_helper/rust-fetch/src/: main.rs
(+300 files in other folders)
